--- a/index.html
+++ b/index.html
@@ -13,11 +13,35 @@
     />
   </head>
   <body>
-    <footer>
+    <footer id="player">
       <div>
-        <div><img src="" alt="" /></div>
-        <div></div>
-        <div></div>
+        <div class="container">
+          <div>
+            <a href=""><img src="assets/images/avatar.png" alt="" /></a>
+          </div>
+          <div>
+            <a href="">Come As You Are</a>
+          </div>
+          <div>
+            <a href=""> Nirvana </a>
+          </div>
+          <div>
+            <button>&hearts;</button>
+          </div>
+          <div>
+            <button>
+              <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
+                <g fill="currentColor" fill-rule="evenodd">
+                  <path
+                    d="M1 3v9h14V3H1zm0-1h14a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1z"
+                    fill-rule="nonzero"
+                  ></path>
+                  <path d="M10 8h4v3h-4z"></path>
+                </g>
+              </svg>
+            </button>
+          </div>
+        </div>
       </div>
     </footer>
     <script
