--- a/index.html
+++ b/index.html
@@ -13,20 +13,18 @@
     />
   </head>
   <body>
-    <footer id="player">
-      <div>
-        <div class="container">
+    <footer>
+      <div id="player" class="d-flex bg-dark flex-row justify-content-between">
+        <div id="containerLeft" class="container d-flex align-items-center">
           <div>
-            <a href=""><img src="assets/images/avatar.png" alt="" /></a>
+            <a href=""><img width="150px" src="assets/images/avatar.png" alt="" /></a>
           </div>
-          <div>
+          <div class="d-flex flex-column">
             <a href="">Come As You Are</a>
-          </div>
-          <div>
             <a href=""> Nirvana </a>
           </div>
-          <div>
-            <button>&hearts;</button>
+          <div class="text-light">
+            <button class="">&hearts;</button>
           </div>
           <div>
             <button>
@@ -41,6 +39,43 @@
               </svg>
             </button>
           </div>
+        </div>
+
+        <div id="containerMiddle" class="text-light d-flex flex-row">
+          <div id="playerControls" class="text-light">
+            <button><i class="bi bi-shuffle"></i></button>
+            <button><i class="bi bi-arrow-left-square"></i></button>
+            <button><i class="bi bi-play-circle-fill"></i></button>
+            <button><i class="bi bi-arrow-right-square"></i></button>
+            <button><i class="bi bi-repeat"></i></button>
+          </div>
+          <div id="playbackBar">
+            <div>0:00</div>
+            <div></div>
+            <div>3:30</div>
+          </div>
+        </div>
+
+        <div id="containerRight">
+          <button><i class="bi bi-mic"></i></button>
+          <button><i class="bi bi-view-list"></i></button>
+          <button>
+            <svg
+              role="presentation"
+              height="16"
+              width="16"
+              aria-hidden="true"
+              class="Svg-sc-ytk21e-0 uPxdw"
+              viewBox="0 0 16 16"
+              data-encore-id="icon"
+            >
+              <path
+                d="M6 2.75C6 1.784 6.784 1 7.75 1h6.5c.966 0 1.75.784 1.75 1.75v10.5A1.75 1.75 0 0 1 14.25 15h-6.5A1.75 1.75 0 0 1 6 13.25V2.75zm1.75-.25a.25.25 0 0 0-.25.25v10.5c0 .138.112.25.25.25h6.5a.25.25 0 0 0 .25-.25V2.75a.25.25 0 0 0-.25-.25h-6.5zm-6 0a.25.25 0 0 0-.25.25v6.5c0 .138.112.25.25.25H4V11H1.75A1.75 1.75 0 0 1 0 9.25v-6.5C0 1.784.784 1 1.75 1H4v1.5H1.75zM4 15H2v-1.5h2V15z"
+              ></path>
+              <path d="M13 10a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm-1-5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"></path>
+            </svg>
+          </button>
+          <button><i class="bi bi-volume-up-fill"></i></button>
         </div>
       </div>
     </footer>
