--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     />
   </head>
   <body>
-    <footer>
-      <div id="player" class="d-flex bg-dark flex-row justify-content-between">
-        <div id="containerLeft" class="container d-flex align-items-center">
+    <footer class="bg-dark">
+      <div id="player" class="row align-items-center">
+        <div id="containerLeft" class="col-4 d-flex flex-row align-items-center">
           <div>
             <a href=""><img width="150px" src="assets/images/avatar.png" alt="" /></a>
           </div>
@@ -41,7 +41,7 @@
           </div>
         </div>
 
-        <div id="containerMiddle" class="text-light d-flex flex-row">
+        <div id="containerMiddle" class="col-4 text-light d-flex justify-content-center">
           <div id="playerControls" class="text-light">
             <button><i class="bi bi-shuffle"></i></button>
             <button><i class="bi bi-arrow-left-square"></i></button>
@@ -56,7 +56,7 @@
           </div>
         </div>
 
-        <div id="containerRight">
+        <div id="containerRight" class="col-4 d-flex justify-content-end">
           <button><i class="bi bi-mic"></i></button>
           <button><i class="bi bi-view-list"></i></button>
           <button>
