--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     />
   </head>
   <body>
-    <footer class="bg-dark">
-      <div id="player" class="row align-items-center">
+    <footer class="bg-dark position-fixed bottom-0 w-100">
+      <div id="player" class="row align-items-center px-3 py-3">
         <div id="containerLeft" class="col-4 d-flex flex-row align-items-center">
           <div>
-            <a href=""><img width="150px" src="assets/images/avatar.png" alt="" /></a>
+            <a class="pe-3" href=""><img width="100px" src="assets/images/avatar.png" alt="" /></a>
           </div>
           <div class="d-flex flex-column">
             <a href="">Come As You Are</a>
             <a href=""> Nirvana </a>
           </div>
           <div class="text-light">
-            <button class="">&hearts;</button>
+            <button class="ms-3 me-1">&hearts;</button>
           </div>
           <div>
             <button>
@@ -41,18 +41,18 @@
           </div>
         </div>
 
-        <div id="containerMiddle" class="col-4 text-light d-flex justify-content-center">
-          <div id="playerControls" class="text-light">
+        <div id="containerMiddle" class="col-4 text-light d-flex flex-column align-items-center">
+          <div id="playerControls" class="d-flex justify-content-center">
             <button><i class="bi bi-shuffle"></i></button>
             <button><i class="bi bi-arrow-left-square"></i></button>
             <button><i class="bi bi-play-circle-fill"></i></button>
             <button><i class="bi bi-arrow-right-square"></i></button>
             <button><i class="bi bi-repeat"></i></button>
           </div>
-          <div id="playbackBar">
-            <div>0:00</div>
+          <div id="playbackBar" class="d-flex justify-content-center">
+            <div class="me-2">0:00</div>
             <div></div>
-            <div>3:30</div>
+            <div class="ms-2">3:30</div>
           </div>
         </div>
 
