increased comments section length

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-3 bg-dark">
-
         <!--navbar-->
         <nav class="navbar navbar-expand-lg bg-body-dark">
           <div class="container-fluid bg-dark flex-column ps-0">
@@ -174,8 +173,17 @@
         </nav>
 
         <!--comments section-->
-        <div class="container-fluid border-light border-top border-opacity-25 overflow-auto" style="max-height:50vh">
-          <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
+        <div
+          class="container-fluid border-light border-top border-opacity-25 overflow-auto"
+          style="max-height: 55vh"
+        >
+          <div
+            data-bs-spy="scroll"
+            data-bs-target="#list-example"
+            data-bs-smooth-scroll="true"
+            class="scrollspy-example"
+            tabindex="0"
+          >
             <div id="friend-comment-1" class="d-flex text-light">
               <span class="list-item fw-bolder me-2">Pippo79</span>
               <p>...</p>
@@ -200,7 +208,7 @@
               <span class="list-item fw-bolder me-2">IlMagalli</span>
               <p>...</p>
             </div>
-            <div id="friend-comment-7" class="d-flex text-light ">
+            <div id="friend-comment-7" class="d-flex text-light">
               <span class="list-item fw-bolder me-2">Amadeuss</span>
               <p>...</p>
             </div>
@@ -232,38 +240,7 @@
               <span class="list-item fw-bolder me-2">IlMagalli</span>
               <p>...</p>
             </div>
-            <div id="friend-comment-7" class="d-flex text-light ">
-              <span class="list-item fw-bolder me-2">Amadeuss</span>
-              <p>...</p>
-            </div>
-            <div id="friend-comment-8" class="d-flex text-light">
-              <span class="list-item fw-bolder me-2">jorjinha</span>
-              <p>...</p>
-            </div><div id="friend-comment-1" class="d-flex text-light">
-              <span class="list-item fw-bolder me-2">Pippo79</span>
-              <p>...</p>
-            </div>
-            <div id="friend-comment-2" class="d-flex text-light">
-              <span class="list-item fw-bolder me-2">Luis-enrique</span>
-              <p>...</p>
-            </div>
-            <div id="friend-comment-3" class="d-flex text-light">
-              <span class="list-item fw-bolder me-2">Aurora86</span>
-              <p>...</p>
-            </div>
-            <div id="friend-comment-4" class="d-flex text-light">
-              <span class="list-item fw-bolder me-2">L@uraaa</span>
-              <p>...</p>
-            </div>
-            <div id="friend-comment-5" class="d-flex text-light">
-              <span class="list-item fw-bolder me-2">Renatone-85</span>
-              <p>...</p>
-            </div>
-            <div id="friend-comment-6" class="d-flex text-light">
-              <span class="list-item fw-bolder me-2">IlMagalli</span>
-              <p>...</p>
-            </div>
-            <div id="friend-comment-7" class="d-flex text-light ">
+            <div id="friend-comment-7" class="d-flex text-light">
               <span class="list-item fw-bolder me-2">Amadeuss</span>
               <p>...</p>
             </div>
@@ -295,7 +272,39 @@
               <span class="list-item fw-bolder me-2">IlMagalli</span>
               <p>...</p>
             </div>
-            <div id="friend-comment-7" class="d-flex text-light ">
+            <div id="friend-comment-7" class="d-flex text-light">
+              <span class="list-item fw-bolder me-2">Amadeuss</span>
+              <p>...</p>
+            </div>
+            <div id="friend-comment-8" class="d-flex text-light">
+              <span class="list-item fw-bolder me-2">jorjinha</span>
+              <p>...</p>
+            </div>
+            <div id="friend-comment-1" class="d-flex text-light">
+              <span class="list-item fw-bolder me-2">Pippo79</span>
+              <p>...</p>
+            </div>
+            <div id="friend-comment-2" class="d-flex text-light">
+              <span class="list-item fw-bolder me-2">Luis-enrique</span>
+              <p>...</p>
+            </div>
+            <div id="friend-comment-3" class="d-flex text-light">
+              <span class="list-item fw-bolder me-2">Aurora86</span>
+              <p>...</p>
+            </div>
+            <div id="friend-comment-4" class="d-flex text-light">
+              <span class="list-item fw-bolder me-2">L@uraaa</span>
+              <p>...</p>
+            </div>
+            <div id="friend-comment-5" class="d-flex text-light">
+              <span class="list-item fw-bolder me-2">Renatone-85</span>
+              <p>...</p>
+            </div>
+            <div id="friend-comment-6" class="d-flex text-light">
+              <span class="list-item fw-bolder me-2">IlMagalli</span>
+              <p>...</p>
+            </div>
+            <div id="friend-comment-7" class="d-flex text-light">
               <span class="list-item fw-bolder me-2">Amadeuss</span>
               <p>...</p>
             </div>
@@ -305,7 +314,6 @@
             </div>
           </div>
         </div>
-
       </div>
     </div>
   </div>
