--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <footer class="bg-dark position-fixed bottom-0 w-100">
-      <div id="player" class="row align-items-center px-3 py-3">
+      <div id="player" class="row align-items-center px-3 py-3 flex-nowrap">
         <div id="containerLeft" class="col-4 d-flex flex-row align-items-center">
           <div>
             <a class="pe-3" href=""><img width="100px" src="assets/images/avatar.png" alt="" /></a>
@@ -25,10 +25,10 @@
             <a href=""> Nirvana </a>
           </div>
           <div class="text-light">
-            <button class="ms-3 me-1">&hearts;</button>
+            <button class="ms-3 me-1 btn bg-transparent text-light">&hearts;</button>
           </div>
           <div>
-            <button>
+            <button class="btn bg-transparent text-light">
               <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
                 <g fill="currentColor" fill-rule="evenodd">
                   <path
@@ -44,7 +44,7 @@
 
         <div id="containerMiddle" class="col-4 text-light d-flex flex-column align-items-center">
           <div id="playerControls" class="d-flex justify-content-center">
-            <a class="bg-transparent text-light">
+            <button id="shuffle" class="btn bg-transparent text-light">
               <svg
                 role="img"
                 height="16"
@@ -61,8 +61,8 @@
                   d="m7.5 10.723.98-1.167.957 1.14a2.25 2.25 0 0 0 1.724.804h1.947l-1.017-1.018a.75.75 0 1 1 1.06-1.06l2.829 2.828-2.829 2.828a.75.75 0 1 1-1.06-1.06L13.109 13H11.16a3.75 3.75 0 0 1-2.873-1.34l-.787-.938z"
                 ></path>
               </svg>
-            </a>
-            <a class="bg-transparent text-light">
+            </button>
+            <button id="previous" class="btn bg-transparent text-light">
               <svg
                 role="img"
                 height="16"
@@ -76,8 +76,8 @@
                   d="M3.3 1a.7.7 0 0 1 .7.7v5.15l9.95-5.744a.7.7 0 0 1 1.05.606v12.575a.7.7 0 0 1-1.05.607L4 9.149V14.3a.7.7 0 0 1-.7.7H1.7a.7.7 0 0 1-.7-.7V1.7a.7.7 0 0 1 .7-.7h1.6z"
                 ></path>
               </svg>
-            </a>
-            <a class="bg-transparent text-light">
+            </button>
+            <button id="play" class="btn rounded-circle">
               <svg
                 role="img"
                 height="16"
@@ -91,8 +91,8 @@
                   d="M3 1.713a.7.7 0 0 1 1.05-.607l10.89 6.288a.7.7 0 0 1 0 1.212L4.05 14.894A.7.7 0 0 1 3 14.288V1.713z"
                 ></path>
               </svg>
-            </a>
-            <a class="bg-transparent text-light">
+            </button id="next">
+            <button class="btn bg-transparent text-light">
               <svg
                 role="img"
                 height="16"
@@ -106,8 +106,8 @@
                   d="M12.7 1a.7.7 0 0 0-.7.7v5.15L2.05 1.107A.7.7 0 0 0 1 1.712v12.575a.7.7 0 0 0 1.05.607L12 9.149V14.3a.7.7 0 0 0 .7.7h1.6a.7.7 0 0 0 .7-.7V1.7a.7.7 0 0 0-.7-.7h-1.6z"
                 ></path>
               </svg>
-            </a>
-            <a class="bg-transparent text-light">
+            </button id="repeat">
+            <button class="btn bg-transparent text-light">
               <svg
                 role="img"
                 height="16"
@@ -121,19 +121,54 @@
                   d="M0 4.75A3.75 3.75 0 0 1 3.75 1h8.5A3.75 3.75 0 0 1 16 4.75v5a3.75 3.75 0 0 1-3.75 3.75H9.81l1.018 1.018a.75.75 0 1 1-1.06 1.06L6.939 12.75l2.829-2.828a.75.75 0 1 1 1.06 1.06L9.811 12h2.439a2.25 2.25 0 0 0 2.25-2.25v-5a2.25 2.25 0 0 0-2.25-2.25h-8.5A2.25 2.25 0 0 0 1.5 4.75v5A2.25 2.25 0 0 0 3.75 12H5v1.5H3.75A3.75 3.75 0 0 1 0 9.75v-5z"
                 ></path>
               </svg>
-            </a>
+            </button>
           </div>
-          <div id="playbackBar" class="d-flex text-light justify-content-center">
-            <div class="me-2">0:00</div>
-            <div></div>
-            <div class="ms-2">3:30</div>
+          <div id="playbackBar" class="container-fluid d-flex text-light justify-content-center">
+            <div class="playback-bar">
+                <div>0:47</div>
+              </div>
+              <div id="playback-progressbar">
+                <input type="range" min="0" max="300" step="5" />
+                <div id="progress-bar" style="--progress-bar-transform: 20%">
+                  <div id="progress-bar-background"></div>
+                </div>
+              </div>
+            <div>3:38</div>
           </div>
         </div>
 
         <div id="containerRight" class="col-4 d-flex justify-content-end">
-          <button><i class="bi bi-mic"></i></button>
-          <button><i class="bi bi-view-list"></i></button>
-          <button class="btn-transparent text-light">
+          <button class="btn bg-transparent text-light">
+            <svg
+              role="img"
+              height="16"
+              width="16"
+              aria-hidden="true"
+              viewBox="0 0 16 16"
+              data-encore-id="icon"
+              class="Svg-sc-ytk21e-0 uPxdw"
+            >
+              <path
+                d="M13.426 2.574a2.831 2.831 0 0 0-4.797 1.55l3.247 3.247a2.831 2.831 0 0 0 1.55-4.797zM10.5 8.118l-2.619-2.62A63303.13 63303.13 0 0 0 4.74 9.075L2.065 12.12a1.287 1.287 0 0 0 1.816 1.816l3.06-2.688 3.56-3.129zM7.12 4.094a4.331 4.331 0 1 1 4.786 4.786l-3.974 3.493-3.06 2.689a2.787 2.787 0 0 1-3.933-3.933l2.676-3.045 3.505-3.99z"
+              ></path>
+            </svg>
+          </button>
+          <button class="btn bg-transparent text-light">
+            <svg
+              role="img"
+              height="16"
+              width="16"
+              aria-hidden="true"
+              viewBox="0 0 16 16"
+              data-encore-id="icon"
+              class="Svg-sc-ytk21e-0 uPxdw"
+            >
+              <path
+                d="M15 15H1v-1.5h14V15zm0-4.5H1V9h14v1.5zm-14-7A2.5 2.5 0 0 1 3.5 1h9a2.5 2.5 0 0 1 0 5h-9A2.5 2.5 0 0 1 1 3.5zm2.5-1a1 1 0 0 0 0 2h9a1 1 0 1 0 0-2h-9z"
+              ></path>
+            </svg>
+          </button>
+          <button class="btn bg-transparent text-light">
             <svg
               role="presentation"
               height="16"
@@ -149,7 +184,32 @@
               <path d="M13 10a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm-1-5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"></path>
             </svg>
           </button>
-          <button><i class="bi bi-volume-up-fill"></i></button>
+          <div id="volume" class="d-flex justify-content-center align-items-center me-0">
+            <button class="btn bg-transparent text-light">
+              <svg
+                role="presentation"
+                height="16"
+                width="16"
+                aria-hidden="true"
+                aria-label="Volume alto"
+                id="volume-icon"
+                viewBox="0 0 16 16"
+                data-encore-id="icon"
+                class="Svg-sc-ytk21e-0 uPxdw"
+              >
+                <path
+                  d="M9.741.85a.75.75 0 0 1 .375.65v13a.75.75 0 0 1-1.125.65l-6.925-4a3.642 3.642 0 0 1-1.33-4.967 3.639 3.639 0 0 1 1.33-1.332l6.925-4a.75.75 0 0 1 .75 0zm-6.924 5.3a2.139 2.139 0 0 0 0 3.7l5.8 3.35V2.8l-5.8 3.35zm8.683 4.29V5.56a2.75 2.75 0 0 1 0 4.88z"
+                ></path>
+                <path d="M11.5 13.614a5.752 5.752 0 0 0 0-11.228v1.55a4.252 4.252 0 0 1 0 8.127v1.55z"></path>
+              </svg>
+            </button>
+            <div id="volume-bar">
+              <input type="range" min="0" max="300" step="5" />
+              <div id="progress-bar" style="--progress-bar-transform: 20%">
+                <div id="progress-bar-background"></div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </footer>
