--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
   </head>
   <body>
     <footer class="bg-dark position-fixed bottom-0 w-100">
-      <div id="player" class="row align-items-center px-3 py-3 flex-nowrap">
+      <div id="player" class="row align-items-center px-4 py-3 flex-nowrap">
         <div id="containerLeft" class="col-4 d-flex flex-row align-items-center">
           <div>
             <a class="pe-3" href=""><img width="100px" src="assets/images/avatar.png" alt="" /></a>
           </div>
           <div class="d-flex flex-column">
-            <a href="">Come As You Are</a>
-            <a href=""> Nirvana </a>
+            <a class="text-decoration-none text-light" href="">Come As You Are</a>
+            <a class="text-decoration-none text-light" href=""> Nirvana </a>
           </div>
           <div class="text-light">
-            <button class="ms-3 me-1 btn bg-transparent text-light">&hearts;</button>
+            <button class="ms-3 me-1 btn bg-transparent text-light fs-3">&hearts;</button>
           </div>
           <div>
             <button class="btn bg-transparent text-light">
@@ -42,8 +42,8 @@
           </div>
         </div>
 
-        <div id="containerMiddle" class="col-4 text-light d-flex flex-column align-items-center">
-          <div id="playerControls" class="d-flex justify-content-center">
+        <div id="containerMiddle" class="col-4 text-light d-flex flex-column align-items-center gap-2">
+          <div id="playerControls" class="d-flex justify-content-center gap-2">
             <button id="shuffle" class="btn bg-transparent text-light">
               <svg
                 role="img"
@@ -127,7 +127,7 @@
             <div class="playback-bar">
                 <div>0:47</div>
               </div>
-              <div id="playback-progressbar">
+              <div id="playback-progressbar" class="mx-2">
                 <input type="range" min="0" max="300" step="5" />
                 <div id="progress-bar" style="--progress-bar-transform: 20%">
                   <div id="progress-bar-background"></div>
