--- a/index.html
+++ b/index.html
@@ -634,8 +634,8 @@
                     </div>
                    </div>
                 </div>
-                <div id="friends" class="col-2 container-fluid p-0">
-                  <div class="d-flex justify-content-between bg-dark">
+                <div id="friends" class="col-2 container-fluid p-0 bg-dark">
+                  <div class="d-flex justify-content-between">
                     <h5 class="text-light">Attività amici</h5>
                     <div class="d-flex flex-end">
                       
@@ -648,10 +648,40 @@
                       </svg>
                     </div>
                   </div>
-                  <div class="container">
-                    <div></div>
-                    <div></div>
-                    <div></div>
+                  <div class="container text-light">
+                    <div class="d-flex justify-content-between">
+                      <div><img width="50px" src="assets/imgs/search/image-19.jpg" alt="amico1"></div>
+                      <div class="text-align-start">
+                        <p>Charlie Hookham</p>
+                        <p>all right - ajeje</p>
+                        <p><i class="bi bi-0-circle"></i> EP III</p>
+                      </div>
+                      <div>
+                        <p>4 ore</p>
+                      </div>
+                    </div>
+                    <div class="d-flex justify-content-between">
+                      <div><img width="50px" src="assets/imgs/search/image-19.jpg" alt="amico1"></div>
+                      <div class="text-align-start">
+                        <p>Charlie Hookham</p>
+                        <p>all right - ajeje</p>
+                        <p><i class="bi bi-0-circle"></i> EP III</p>
+                      </div>
+                      <div>
+                        <p>4 ore</p>
+                      </div>
+                    </div>
+                    <div class="d-flex justify-content-between">
+                      <div><img width="50px" src="assets/imgs/search/image-19.jpg" alt="amico1"></div>
+                      <div class="text-align-start">
+                        <p>Charlie Hookham</p>
+                        <p>all right - ajeje</p>
+                        <p><i class="bi bi-0-circle"></i> EP III</p>
+                      </div>
+                      <div>
+                        <p>4 ore</p>
+                      </div>
+                    </div>
                   </div>
                 </div>
             </div>
@@ -659,7 +689,7 @@
 
     </div>
     
-     <footer class="bg-dark position-fixed bottom-0 w-100">
+     <footer class="position-fixed bottom-0 w-100">
       <div id="player" class="row align-items-center px-4 py-3 flex-nowrap">
         <div id="containerLeft" class="col-4 d-flex flex-row align-items-center">
           <div>
