--- a/index.html
+++ b/index.html
@@ -635,11 +635,11 @@
                    </div>
                 </div>
                 <div id="friends" class="col-2 container-fluid p-0 bg-dark">
-                  <div class="d-flex justify-content-between">
+                  <div class="d-flex justify-content-between p">
                     <h5 class="text-light">Attività amici</h5>
                     <div class="d-flex flex-end">
                       
-                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-plus" viewBox="0 0 16 16">
+                      <svg class="me-1" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-plus" viewBox="0 0 16 16">
                         <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H1s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C9.516 10.68 8.289 10 6 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
                         <path fill-rule="evenodd" d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z"/>
                       </svg>
@@ -689,29 +689,29 @@
 
     </div>
     
-     <footer class="position-fixed bottom-0 w-100">
-      <div id="player" class="row align-items-center px-4 py-3 flex-nowrap">
+     <footer class="position-fixed bottom-0 w-100 border-top border-light">
+      <div id="player" class="row align-items-center px-4 py-2">
         <div id="containerLeft" class="col-4 d-flex flex-row align-items-center">
           <div>
-            <a class="pe-3" href=""><img width="100px" src="assets/images/avatar.png" alt="" /></a>
+            <a class="pe-3" href=""><img width="85px" src="assets/images/avatar.png" alt="" /></a>
           </div>
           <div class="d-flex flex-column">
             <a class="text-decoration-none text-light" href="">Come As You Are</a>
             <a class="text-decoration-none text-light" href=""> Nirvana </a>
           </div>
           <div class="text-light">
-            <button class="ms-3 me-1 btn bg-transparent text-light fs-3">&hearts;</button>
+            <button class="ms-3 me-1 btn bg-transparent text-light fs-3 svg"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-suit-heart-fill" viewBox="0 0 16 16">
+              <path d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z"/>
+            </svg></button>
           </div>
           <div>
             <button class="btn bg-transparent text-light">
               <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
-                <g fill="currentColor" fill-rule="evenodd">
                   <path
                     d="M1 3v9h14V3H1zm0-1h14a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1z"
                     fill-rule="nonzero"
                   ></path>
                   <path d="M10 8h4v3h-4z"></path>
-                </g>
               </svg>
             </button>
           </div>
