new artist page beta

--- a/index.html
+++ b/index.html
@@ -312,8 +312,11 @@
               </div>
             </div>
           </div>
-            <div class="col-7 p-3" id="main-container">
-                <div class="d-flex justify-content-between align-items-center">
+
+
+            <div class="col-7" id="main-container">
+              <div id="artistPage" class="row row-gap-5">
+                <div class="d-flex justify-content-between align-items-center mb-5">
                     <div id ="switch-icon" class="p-1">
                         <button class="bg-dark border border-dark rounded-circle me-2"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="white" class="bi bi-caret-left" viewBox="0 0 16 16">
                             <path d="M10 12.796V3.204L4.519 8 10 12.796zm-.659.753-5.48-4.796a1 1 0 0 1 0-1.506l5.48-4.796A1 1 0 0 1 11 3.204v9.592a1 1 0 0 1-1.659.753z"/>
@@ -329,34 +332,21 @@
                           </svg><span class="text-white ms-2">Username</span></button>
                     </div>
                 </div>
-                <div class="container-fluid bg-dark p-3 border  border-dark rounded mt-5">
-                    <div class="row g-1">
-                    <div class="col-4">
-                        <img src="randomimage.jpg" class="img-fluid" alt="...">
+                <div class="container-fluid mt-5">
+                  <div class="row g-1">
+                    <div class="col-6">
+                      <div class="d-flex">
+                        <i class="bi bi-check-circle"></i>
+                        <h5>Artista verificato</h5>
+                      </div>
+                      <h1>Artist Name</h1>
+                      <h5>3.433.158 ascoltatori mensili</h5>
                     </div>
-                        <div class="col-8">
-                            <div class="d-flex justify-content-between ">
-                          <p class="text-white fw-semibold">ALBUM</p>
-                          <button id="btn-hide" class="p-1 border-dark border-opacity-25 rounded text-center d-flex-end bg-dark text-secondary ">NASCONDI ANNUNCI</button>
-                            </div>
-                            <div id="song-title" class="mt-2">
-                                <h2 class="text-white">TITOLO CANZONE</h2>
-                            </div>
-                            <div id="author" class="mt-4">
-                                <p class="text-white">Autore</p>
-                            </div>
-                            <div id="description">
-                                <p class="text-white">Ascolta il nuovo singolo di Autore</p>
-                            </div>
-                            <div id="btn-container" class="mt-5">
-                                <button class="bg-success text-dark  border-0 rounded-pill fw-semibold py-3 px-5 me-2" id="play-btn">Play</button>
-                                <button class="bg-dark text-white border  rounded-pill border-opacity-25  fw-semibold py-3 px-5 me-2" id="save-btn">Salva</button>
-                                <button class="bg-transparent border-0 text-white fs-1" id="info">...</button>
-                            </div>
-                        </div>
-                    </div>
-                    
+                        
+                  </div> 
                 </div>
+              </div>
+
                 <div class="container-fluid mt-5">
                     <div class="row g-1">
                         <div class="col-12">
