--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
   </head>
 </head>
 <body>
@@ -340,7 +340,7 @@
                         <h5>Artista verificato</h5>
                       </div>
                       <h1>Artist Name</h1>
-                      <h5>3.433.158 ascoltatori mensili</h5>
+                      <h5 class="py-3">3.433.158 ascoltatori mensili</h5>
                     </div>
                         
                   </div> 
