updated favourite artist section

--- a/index.html
+++ b/index.html
@@ -452,9 +452,21 @@
                               </li>
                             </ol>
                         </div>
+                        
                         <div class="col-5">
-                          <h3 class="text-light">Brani che ti piacciono</h3>    
-                        </div>   
+                          <h3 class="text-light mb-3">Brani che ti piacciono</h3>
+                          <div class="d-flex align-items-center">
+                           <img src="./assets/imgs/main/image-11.jpg" class="mx-3 rounded-circle" width="60" height="60">
+                           <div>
+                            <span class="my-2 text-light">Hai messo Mi piace a 11 brani</span>
+                            <p class="text-light">di Imagine Dragons</p>
+                           </div>
+                          </div>    
+                        </div> 
+                        
+                        <a href="#" class="text-white-50 text-decoration-none">
+                          <h5 >VISUALIZZA ALTRO</h5>
+                        </a>
                     </div>
 
                    </div>
