--- a/loginPage.html
+++ b/loginPage.html
@@ -100,7 +100,7 @@
         </form>
         <hr />
       </div>
-      <div class="d-flex flex-column align-items-center mt-3">
+      <div class="d-flex flex-column align-items-center mt-3 mb-3">
         <p class="text-body fw-bold fs-5">Non hai un account?</p>
         <button class="login bg-transparent border-0 mt-2">
           <div
