--- a/album-page.html
+++ b/album-page.html
@@ -7,127 +7,13 @@
         <title>Album Page</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-        <style>
-            @font-face {
-                font-family: "Circular";
-                src: url('../fonts/CircularStd-Light.otf');
-                font-weight: 300;
-                font-style: normal;
-            }
-            @font-face {
-                font-family: "Circular";
-                src: url('../fonts/CircularStd-LightItalic.otf');
-                font-weight: 300;
-                font-style: italic;
-            }
-            @font-face {
-                font-family: "Circular";
-                src: url('../fonts/CircularStd-Book.otf');
-                font-weight: 400;
-                font-style: normal;
-            }
-            @font-face {
-                font-family: "Circular";
-                src: url('../fonts/CircularStd-BookItalic.otf');
-                font-weight: 400;
-                font-style: italic;
-            }
-            @font-face {
-                font-family: "Circular";
-                src: url('../fonts/CircularStd-Medium.otf');
-                font-weight: 500;
-                font-style: normal;
-            }
-            @font-face {
-                font-family: "Circular";
-                src: url('../fonts/CircularStd-MediumItalic.otf');
-                font-weight: 500;
-                font-style: italic;
-            }
-            @font-face {
-                font-family: "Circular";
-                src: url('../fonts/CircularStd-MediumItalic.otf');
-                font-weight: 500;
-                font-style: italic;
-            }
-            @font-face {
-                font-family: "Circular";
-                src: url('../fonts/CircularStd-Bold.otf');
-                font-weight: 700;
-                font-style: normal;
-            }
-            @font-face {
-                font-family: "Circular";
-                src: url('../fonts/CircularStd-BoldItalic.otf');
-                font-weight: 700;
-                font-style: italic;
-            }
-            @font-face {
-                font-family: "Circular";
-                src: url('../fonts/CircularStd-Black.otf');
-                font-weight: 900;
-                font-style: normal;
-            }
-            @font-face {
-                font-family: "Circular";
-                src: url('../fonts/CircularStd-BlackItalic.otf');
-                font-weight: 900;
-                font-style: italic;
-            }
-
-
-            body {
-                font-family: "Circular";
-                font-style: normal;
-            }
-            #main-container {
-                background: rgb(24, 21, 21);
-                background: linear-gradient(0deg, rgb(32, 28, 28) 40%, rgb(206, 180, 67) 82%);
-                max-height: 90vh;
-                overflow: auto;
-            }
-            #album-img {
-                width: 200px;
-                height: 200px;
-            }
-            a {
-                text-decoration: none;
-            }
-            .social {
-                display: flex;
-                flex-direction: row;
-                justify-content: center;
-                align-items: center;
-                text-align: center;
-                width: 40px;
-                height: 40px;
-            }
-            ::-webkit-scrollbar {
-                width: 8px;
-            }
-
-            ::-webkit-scrollbar-track {
-                background: black;
-            }
-
-            ::-webkit-scrollbar-thumb {
-                background: #535353;
-            }
-
-            ::-webkit-scrollbar-thumb:hover {
-                background: #555;
-            }
-
-            footer {
-                background-color: #535353;
-            }
-        </style>
+        <link rel="stylesheet" href="assets/css/album-page.css">
     </head>
     <body>
         <div class="container-fluid">
             <div class="row">
                 <div
-                    class="col-3 bg-dark">
+                    class="col-12 col-md-3 bg-dark " id="container-navbar">
                     <!--navbar-->
                     <nav class="navbar navbar-expand-lg bg-body-dark">
                         <div class="container-fluid bg-dark flex-column ps-0">
@@ -193,7 +79,7 @@
                     </nav>
 
                     <!--comments section-->
-                    <div class="container-fluid border-light border-top border-opacity-25 overflow-auto" style="max-height: 55vh">
+                    <div class="container-fluid border-light border-top border-opacity-25 overflow-auto" style="max-height: 55vh" id="comments">
                         <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
                             <div id="friend-comment-1" class="d-flex text-light">
                                 <span class="list-item fw-bolder me-2">Pippo79</span>
