--- a/index.html
+++ b/index.html
@@ -337,10 +337,10 @@
                     <div class="col-6">
                       <div class="d-flex">
                         <i class="bi bi-check-circle"></i>
-                        <h5>Artista verificato</h5>
+                        <h5 class="text-light">Artista verificato</h5>
                       </div>
-                      <h1>Artist Name</h1>
-                      <h5 class="py-3">3.433.158 ascoltatori mensili</h5>
+                      <h1 class="text-light">Artist Name</h1>
+                      <h5 class="py-3 text-light">3.433.158 ascoltatori mensili</h5>
                     </div>
                         
                   </div> 
@@ -354,7 +354,7 @@
                             <span class="ButtonInner-sc-14ud5tc-0 dpREpp encore-bright-accent-set"><span aria-hidden="true" class="IconWrapper__Wrapper-sc-1hf1hjl-0 fSnHJ"><svg role="img" height="28" width="28" aria-hidden="true" viewBox="0 0 24 24" data-encore-id="icon" class="Svg-sc-ytk21e-0 uPxdw"><path d="m7.05 3.606 13.49 7.788a.7.7 0 0 1 0 1.212L7.05 20.394A.7.7 0 0 1 6 19.788V4.212a.7.7 0 0 1 1.05-.606z"></path></svg></span></span></button>
                         </div>
                         <div class="col-1 d-flex">
-                          <button type="button" class="btn btn-outline-light">FOLLOWING</button>
+                          <button type="button" class="btn btn-outline-light fw-bold">FOLLOWING</button>
                           <a href="#" class="ms-3 pt-1">
                             <svg
                               xmlns="http://www.w3.org/2000/svg"
