--- a/album-page.html
+++ b/album-page.html
@@ -18,7 +18,7 @@
                     <nav class="navbar navbar-expand-lg bg-body-dark">
                         <div class="container-fluid bg-dark flex-column ps-0">
                             <div id="navbar" class="container-fluid bg-dark flex-column ps-0">
-                                <a class="navbar-brand" href="#">
+                                <a class="navbar-brand" href="#" id="three-dots">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-three-dots" viewbox="0 0 16 16">
                                         <path d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"/>
                                     </svg>
@@ -28,7 +28,7 @@
                                 </button>
                                 <div class="collapse navbar-collapse d-flex flex-column" id="navbarNavDropdown">
                                     <div class="container-fluid d-flex">
-                                        <ul class="navbar-nav mt-3 flex-column">
+                                        <ul class="navbar-nav mt-3 flex-md-column" id="navbar-menu">
                                             <li class="nav-item d-flex align-items-center">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-house-door-fill" viewbox="0 0 16 16">
                                                     <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5Z"/>
@@ -860,7 +860,7 @@
 
 
         </div>
-        <footer class="position-fixed bg-dark bottom-0 w-100 border-top border-light">
+        <footer class="position-fixed bg-dark bottom-md-0 w-100 border-top border-light" id="footer">
             <div id="player" class="row align-items-center px-4 py-2">
                 <div id="containerLeft" class="col-4 d-flex flex-row align-items-center">
                     <div>
