--- a/album-page.html
+++ b/album-page.html
@@ -212,7 +212,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-7 p-3" id="main-container">
+                <div class="col-12 col-md-7 p-3" id="main-container">
                     <div class="d-flex justify-content-between align-items-center">
                         <div id="switch-icon" class="p-1 d-flex">
                             <button class="bg-dark border border-dark rounded-circle me-2 social">
