--- a/album-page.html
+++ b/album-page.html
@@ -9,26 +9,26 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link rel="stylesheet" href="assets/css/album-page.css">
     </head>
-    <body>
+    <body class="bg-dark">
         <div class="container-fluid">
             <div class="row">
                 <div
-                    class="col-12 col-md-3 bg-dark " id="container-navbar">
+                    class="col-12 col-md-3" id="container-navbar">
                     <!--navbar-->
-                    <nav class="navbar navbar-expand-lg bg-body-dark">
-                        <div class="container-fluid bg-dark flex-column ps-0">
-                            <div id="navbar" class="container-fluid bg-dark flex-column ps-0">
+                    <nav class="navbar navbar-expand-lg bg-transparent">
+                        <div class="container-fluid flex-column ps-0 bg-transparent">
+                            <div id="navbar" class="container-fluid flex-column bg-transparent ps-0">
                                 <a class="navbar-brand" href="#" id="three-dots">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-three-dots" viewbox="0 0 16 16">
                                         <path d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"/>
                                     </svg>
                                 </a>
                                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                                    <span class="navbar-toggler-icon"></span>
+                                    <span class="navbar-toggler-icon" id="icon"></span>
                                 </button>
-                                <div class="collapse navbar-collapse d-flex flex-column" id="navbarNavDropdown">
-                                    <div class="container-fluid d-flex">
-                                        <ul class="navbar-nav mt-3 flex-md-column" id="navbar-menu">
+                                <div class="collapse navbar-collapse d-flex flex-column bg-transparent" id="navbarNavDropdown">
+                                    <div class="container-fluid d-flex" id="mobile-navbar">
+                                        <ul class="navbar-nav mt-3 flex-md-column bg-transparent" id="navbar-menu">
                                             <li class="nav-item d-flex align-items-center">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-house-door-fill" viewbox="0 0 16 16">
                                                     <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5Z"/>
