--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                           <div class="d-flex align-items-center">
                            <img src="./assets/imgs/main/image-11.jpg" class="mx-3 rounded-circle" width="60" height="60">
                            <div>
-                            <span class="my-2 text-light">Hai messo Mi piace a 11 brani</span>
+                            <span class="my-2 text-light fw-bold">Hai messo Mi piace a 11 brani</span>
                             <p class="text-light">di Imagine Dragons</p>
                            </div>
                           </div>    
