--- a/loginPage.html
+++ b/loginPage.html
@@ -80,10 +80,10 @@
           </div>
           <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label fw-bold">Password</label>
-            <div class="d-flex">
+            <div class="d-flex position-relative align-items-center">
               <input type="password" class="form-control" placeholder="Password" />
-              <button class="btn" type="button" id="togglePassword">
-                <i class="bi bi-eye-slash"></i>
+              <button id="showPass" class="btn" type="button" id="togglePassword">
+                <i class="bi bi-eye-slash fs-4"></i>
               </button>
             </div>
             <div id="passwordHelp" class="form-text">
@@ -92,8 +92,8 @@
           </div>
           <div class="d-flex justify-content-between">
             <div class="mb-3 form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1" />
-              <label class="form-check-label" for="exampleCheck1">Ricordami</label>
+              <input type="checkbox" class="form-check-input" id="check1" />
+              <label class="form-check-label" for="check1">Ricordami</label>
             </div>
             <button type="submit" id="accedi" class="btn rounded-5 px-4 py-2 text-body">ACCEDI</button>
           </div>
