--- a/loginPage.html
+++ b/loginPage.html
@@ -78,7 +78,7 @@
             <label for="exampleInputEmail1" class="form-label fw-bold">Indirizzo e-mail o nome utente</label>
             <input type="text" class="form-control" id="exampleInputEmail1" name="exampleInputEmail1"
             placeholder="Indirizzo e-mail o nome utente"
-            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$|^[a-zA-Z0-9_-]{3,16}$"
+            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$|^[a-zA-Z0-9_\-]+$"
           </div>
           <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label fw-bold">Password</label>
