modified popular songs gap

--- a/index.html
+++ b/index.html
@@ -378,75 +378,75 @@
                    <div class="container-fluid mt-5">
                     <div class="row">
                         <div id="popularArtistSongs"class="col-7">
-                            <h3 class="text-light">Popolari</h3>
+                            <h3 class="text-light mb-5">Popolari</h3>
                             <ol class="text-light fw-bold">
                               <li>
                                 <div class="d-flex justify-content-between align-items-center">
-                                  <div class="d-flex">
+                                  <div class="d-flex me-5">
                                    <img src="./assets/imgs/main/image-12.jpg" class="mx-3" alt="artistTrack" width="35" height="35">
                                    <h5>Ocean Avenue</h5> 
                                   </div>
-                                  <div>
+                                  <div class="mx-5 px-5">
                                     <p>287.350.179</p>
                                   </div>
                                   <div>
-                                    <p>3:18</p>
+                                    <p class="mx-5 ps-5">3:18</p>
                                   </div>
                                 </div>
                               </li>
                               <li>
                                 <div class="d-flex justify-content-between align-items-center">
-                                  <div class="d-flex">
+                                  <div class="d-flex me-5">
                                    <img src="./assets/imgs/main/image-12.jpg" class="mx-3" alt="artistTrack" width="35" height="35">
                                    <h5>Ocean Avenue</h5> 
                                   </div>
-                                  <div>
+                                  <div class="mx-5 px-5">
                                     <p>287.350.179</p>
                                   </div>
                                   <div>
-                                    <p>3:18</p>
+                                    <p class="mx-5 ps-5">3:18</p>
                                   </div>
                                 </div>
                               </li>
                               <li>
                                 <div class="d-flex justify-content-between align-items-center">
-                                  <div class="d-flex">
+                                  <div class="d-flex me-5">
                                    <img src="./assets/imgs/main/image-12.jpg" class="mx-3" alt="artistTrack" width="35" height="35">
                                    <h5>Ocean Avenue</h5> 
                                   </div>
                                   <div>
-                                    <p>287.350.179</p>
+                                    <p class="mx-5 px-5">287.350.179</p>
                                   </div>
                                   <div>
-                                    <p>3:18</p>
+                                    <p class="mx-5 ps-5">3:18</p>
                                   </div>
                                 </div>
                               </li>
                               <li>
                                 <div class="d-flex justify-content-between align-items-center">
-                                  <div class="d-flex">
+                                  <div class="d-flex me-5">
                                    <img src="./assets/imgs/main/image-12.jpg" class="mx-3" alt="artistTrack" width="35" height="35">
                                    <h5>Ocean Avenue</h5> 
                                   </div>
                                   <div>
-                                    <p>287.350.179</p>
+                                    <p class="mx-5 px-5">287.350.179</p>
                                   </div>
                                   <div>
-                                    <p>3:18</p>
+                                    <p class="mx-5 ps-5">3:18</p>
                                   </div>
                                 </div>
                               </li>
                               <li>
                                 <div class="d-flex justify-content-between align-items-center">
-                                  <div class="d-flex">
+                                  <div class="d-flex me-5">
                                    <img src="./assets/imgs/main/image-12.jpg" class="mx-3" alt="artistTrack" width="35" height="35">
                                    <h5>Ocean Avenue</h5> 
                                   </div>
                                   <div>
-                                    <p>287.350.179</p>
+                                    <p class="mx-5 px-5">287.350.179</p>
                                   </div>
                                   <div>
-                                    <p>3:18</p>
+                                    <p class="mx-5 ps-5">3:18</p>
                                   </div>
                                 </div>
                               </li>
@@ -456,7 +456,7 @@
                         <div class="col-5">
                           <h3 class="text-light mb-3">Brani che ti piacciono</h3>
                           <div class="d-flex align-items-center">
-                           <img src="./assets/imgs/main/image-11.jpg" class="mx-3 rounded-circle" width="60" height="60">
+                           <img src="./assets/imgs/main/image-11.jpg" class="mx-2 rounded-circle" width="60" height="60">
                            <div>
                             <span class="my-2 text-light fw-bold">Hai messo Mi piace a 11 brani</span>
                             <p class="text-light">di Imagine Dragons</p>
@@ -465,7 +465,7 @@
                         </div> 
                         
                         <a href="#" class="text-white-50 text-decoration-none">
-                          <h5 >VISUALIZZA ALTRO</h5>
+                          <h5 class="ms-4">VISUALIZZA ALTRO</h5>
                         </a>
                     </div>
 
