--- a/album-page.html
+++ b/album-page.html
@@ -602,9 +602,9 @@
         </div>
         <footer class="position-fixed bottom-md-0 w-100 border-top border-light" id="footer">
             <div id="player" class="row align-items-center bg-dark px-4 py-2">
-                <div id="containerLeft" class="col-4 d-flex flex-row align-items-center">
+                <div id="containerLeft" class="col-6 col-md-4 d-flex flex-row align-items-center">
                     <div>
-                        <a class="pe-3" href=""><img width="85px" src="assets/images/avatar.png" alt=""/></a>
+                        <a class="pe-3" href=""><img id="song-img" width="85px" src="assets/images/avatar.png" alt=""/></a>
                     </div>
                     <div class="d-flex flex-column">
                         <a class="text-decoration-none text-light" href="">Come As You Are</a>
@@ -612,7 +612,7 @@
                             Nirvana
                         </a>
                     </div>
-                    <div class="text-light">
+                    <div class="text-light" id="heart-svg">
                         <button class="ms-3 me-1 btn bg-transparent text-light fs-3 svg">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-suit-heart-fill" viewbox="0 0 16 16">
                                 <path d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z"/>
@@ -620,7 +620,7 @@
                         </button>
                     </div>
                     <div>
-                        <button class="btn bg-transparent text-light">
+                        <button class="btn bg-transparent text-light" id="another-svg">
                             <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M1 3v9h14V3H1zm0-1h14a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1z" fill-rule="nonzero"></path>
                                 <path d="M10 8h4v3h-4z"></path>
@@ -629,7 +629,7 @@
                     </div>
                 </div>
 
-                <div id="containerMiddle" class="col-4 text-light d-flex flex-column align-items-center gap-2">
+                <div id="containerMiddle" class="col-6 col-md-4 text-light d-flex flex-column align-items-center gap-2">
                     <div id="playerControls" class="d-flex justify-content-center gap-2">
                         <button id="shuffle" class="btn bg-transparent text-light">
                             <svg role="img" height="16" width="16" aria-hidden="true" viewbox="0 0 16 16" data-encore-id="icon" class="Svg-sc-ytk21e-0 uPxdw">
@@ -646,13 +646,13 @@
                             <svg role="img" height="16" width="16" aria-hidden="true" viewbox="0 0 16 16" data-encore-id="icon" class="Svg-sc-ytk21e-0 uPxdw">
                                 <path d="M3 1.713a.7.7 0 0 1 1.05-.607l10.89 6.288a.7.7 0 0 1 0 1.212L4.05 14.894A.7.7 0 0 1 3 14.288V1.713z"></path>
                             </svg>
-                        </buttonid="next">
-                        <button class="btn bg-transparent text-light">
+                        </button>
+                        <button class="btn bg-transparent text-light" id="next">
                             <svg role="img" height="16" width="16" aria-hidden="true" viewbox="0 0 16 16" data-encore-id="icon" class="Svg-sc-ytk21e-0 uPxdw">
                                 <path d="M12.7 1a.7.7 0 0 0-.7.7v5.15L2.05 1.107A.7.7 0 0 0 1 1.712v12.575a.7.7 0 0 0 1.05.607L12 9.149V14.3a.7.7 0 0 0 .7.7h1.6a.7.7 0 0 0 .7-.7V1.7a.7.7 0 0 0-.7-.7h-1.6z"></path>
                             </svg>
-                        </buttonid="repeat">
-                        <button class="btn bg-transparent text-light">
+                        </button>
+                        <button class="btn bg-transparent text-light" id="repeat">
                             <svg role="img" height="16" width="16" aria-hidden="true" viewbox="0 0 16 16" data-encore-id="icon" class="Svg-sc-ytk21e-0 uPxdw">
                                 <path d="M0 4.75A3.75 3.75 0 0 1 3.75 1h8.5A3.75 3.75 0 0 1 16 4.75v5a3.75 3.75 0 0 1-3.75 3.75H9.81l1.018 1.018a.75.75 0 1 1-1.06 1.06L6.939 12.75l2.829-2.828a.75.75 0 1 1 1.06 1.06L9.811 12h2.439a2.25 2.25 0 0 0 2.25-2.25v-5a2.25 2.25 0 0 0-2.25-2.25h-8.5A2.25 2.25 0 0 0 1.5 4.75v5A2.25 2.25 0 0 0 3.75 12H5v1.5H3.75A3.75 3.75 0 0 1 0 9.75v-5z"></path>
                             </svg>
@@ -668,29 +668,29 @@
                                 <div id="progress-bar-background"></div>
                             </div>
                         </div>
-                        <div>3:38</div>
+                        <div id="time">3:38</div>
                     </div>
                 </div>
 
                 <div id="containerRight" class="col-4 d-flex justify-content-end">
-                    <button class="btn bg-transparent text-light">
+                    <button class="btn bg-transparent text-light" id="mic">
                         <svg role="img" height="16" width="16" aria-hidden="true" viewbox="0 0 16 16" data-encore-id="icon" class="Svg-sc-ytk21e-0 uPxdw">
                             <path d="M13.426 2.574a2.831 2.831 0 0 0-4.797 1.55l3.247 3.247a2.831 2.831 0 0 0 1.55-4.797zM10.5 8.118l-2.619-2.62A63303.13 63303.13 0 0 0 4.74 9.075L2.065 12.12a1.287 1.287 0 0 0 1.816 1.816l3.06-2.688 3.56-3.129zM7.12 4.094a4.331 4.331 0 1 1 4.786 4.786l-3.974 3.493-3.06 2.689a2.787 2.787 0 0 1-3.933-3.933l2.676-3.045 3.505-3.99z"></path>
                         </svg>
                     </button>
-                    <button class="btn bg-transparent text-light">
+                    <button class="btn bg-transparent text-light" id="ddg">
                         <svg role="img" height="16" width="16" aria-hidden="true" viewbox="0 0 16 16" data-encore-id="icon" class="Svg-sc-ytk21e-0 uPxdw">
                             <path d="M15 15H1v-1.5h14V15zm0-4.5H1V9h14v1.5zm-14-7A2.5 2.5 0 0 1 3.5 1h9a2.5 2.5 0 0 1 0 5h-9A2.5 2.5 0 0 1 1 3.5zm2.5-1a1 1 0 0 0 0 2h9a1 1 0 1 0 0-2h-9z"></path>
                         </svg>
                     </button>
-                    <button class="btn bg-transparent text-light">
+                    <button class="btn bg-transparent text-light" id="speakers">
                         <svg role="presentation" height="16" width="16" aria-hidden="true" class="Svg-sc-ytk21e-0 uPxdw" viewbox="0 0 16 16" data-encore-id="icon">
                             <path d="M6 2.75C6 1.784 6.784 1 7.75 1h6.5c.966 0 1.75.784 1.75 1.75v10.5A1.75 1.75 0 0 1 14.25 15h-6.5A1.75 1.75 0 0 1 6 13.25V2.75zm1.75-.25a.25.25 0 0 0-.25.25v10.5c0 .138.112.25.25.25h6.5a.25.25 0 0 0 .25-.25V2.75a.25.25 0 0 0-.25-.25h-6.5zm-6 0a.25.25 0 0 0-.25.25v6.5c0 .138.112.25.25.25H4V11H1.75A1.75 1.75 0 0 1 0 9.25v-6.5C0 1.784.784 1 1.75 1H4v1.5H1.75zM4 15H2v-1.5h2V15z"></path>
                             <path d="M13 10a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm-1-5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"></path>
                         </svg>
                     </button>
                     <div id="volume" class="d-flex justify-content-center align-items-center me-0">
-                        <button class="btn bg-transparent text-light">
+                        <button class="btn bg-transparent text-light" id="volume-icon">
                             <svg role="presentation" height="16" width="16" aria-hidden="true" aria-label="Volume alto" id="volume-icon" viewbox="0 0 16 16" data-encore-id="icon" class="Svg-sc-ytk21e-0 uPxdw">
                                 <path d="M9.741.85a.75.75 0 0 1 .375.65v13a.75.75 0 0 1-1.125.65l-6.925-4a3.642 3.642 0 0 1-1.33-4.967 3.639 3.639 0 0 1 1.33-1.332l6.925-4a.75.75 0 0 1 .75 0zm-6.924 5.3a2.139 2.139 0 0 0 0 3.7l5.8 3.35V2.8l-5.8 3.35zm8.683 4.29V5.56a2.75 2.75 0 0 1 0 4.88z"></path>
                                 <path d="M11.5 13.614a5.752 5.752 0 0 0 0-11.228v1.55a4.252 4.252 0 0 1 0 8.127v1.55z"></path>
