player mobile ok v2.0

--- a/album-page.html
+++ b/album-page.html
@@ -809,7 +809,10 @@
               <a class="text-decoration-none text-light" href=""> Nirvana </a>
             </div>
           </div>
-          <div class="text-light" id="heart-svg">
+          <div
+            class="text-light flex-grow-1 d-flex flex-md-grow-0 justify-content-end justify-content-md-center"
+            id="heart-svg"
+          >
             <button class="ms-3 me-1 btn bg-transparent text-light fs-3 svg">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
