--- a/album-page.html
+++ b/album-page.html
@@ -300,7 +300,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-7 p-3" id="main-container">
+        <div class="col-12 col-md-7 p-3 mb-5" id="main-container">
           <div class="d-flex justify-content-between align-items-center">
             <div id="switch-icon" class="p-1 d-flex">
               <button class="bg-dark border border-dark rounded-circle me-2 social">
@@ -704,7 +704,7 @@
                   <span>Cookie </span>
                   <span>Info annunci</span>
                 </div>
-                <div class="col-3 text-secondary">
+                <div class="col-3 text-secondary pb-3">
                   &copy;2023 Matteo Vacca,<br />
                   Salvatore Mercurio,<br />Vittorio Vescio
                 </div>
